--- a/css/style.css
+++ b/css/style.css
@@ -229,22 +229,296 @@ body {
   text-transform: uppercase;
 }
 
-.button {
+.hero-button {
   display: inline-block;
   padding: 10px 32px;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-
+  border: var(--accent-color);
+  min-width: 200px;
+  height: 50px;
+  cursor: pointer;
   background-color: var(--accent-color);
   color: var(--primary-white-color);
 
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
+  letter-spacing: 0.06em;
   align-items: center;
   text-align: center;
+  text-decoration: none;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: visible;
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.7);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 528px;
+  height: 581px;
+  transform: translate(-50%, -50%) scale(1);
+
+  background: var(--primary-white-color);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+
+  border: 0;
+  border-radius: 50%;
+
+  background-color: var(--primary-white-color);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+}
+
+.hero-form {
+  margin: 40px;
+  width: 448px;
+}
+
+.form-title {
+  display: block;
+  margin-top: 40px;
+  margin-bottom: 30px;
+
+  text-align: center;
+  color: #212121;
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.form-field {
+  position: relative;
+  margin-bottom: 28px;
+}
+
+.form-field.terms {
+  display: flex;
+}
+
+.modal-input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding: 0 0 0 42px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  cursor: pointer;
+}
+
+.modal-label {
+  position: absolute;
+  top: 50%;
+  left: 42px;
+  transform: translateY(-50%);
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .modal-label,
+.modal-input:not(:placeholder-shown) + .modal-label {
+  transform: translate(-23px, -40px);
+  color: var(--accent-color);
+}
+
+.modal-input:focus ~ .icon-modal,
+.modal-input:not(:placeholder-shown) ~ .icon-modal {
+  fill: var(--accent-color);
+}
+
+.modal-input:focus,
+.modal-input:not(:placeholder-shown) {
+  border-color: var(--accent-color);
+  outline: none;
+}
+
+.icon-modal {
+  display: block;
+
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 16px;
+  margin-right: 8px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.textarea-label {
+  position: absolute;
+  top: 12px;
+  left: 16px;
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.textarea {
+  width: 100%;
+  padding: 12px 0 0 16px;
+
+  resize: none;
+  white-space: nowrap;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  cursor: pointer;
+}
+
+.textarea:focus + .textarea-label,
+.textarea:not(:placeholder-shown) + .textarea-label {
+  transform: translateY(-35px);
+  color: var(--accent-color);
+}
+
+.textarea:focus,
+.textarea:not(:placeholder-shown) {
+  border-color: var(--accent-color);
+  outline: none;
+}
+
+.terms-field {
+  width: 100%;
+  text-align: left;
+}
+
+.label-checkbox {
+  display: flex;
+
+  font-size: 14px;
+  line-height: 1.71;
+  align-items: center;
+  color: var(--primary-text-color);
+
+  cursor: pointer;
+}
+
+.input-checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0px;
+
+  border: 0px;
+
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.input-checkbox:checked + .icon-checkbox {
+  background-color: var(--accent-color);
+  background-image: url(../images/check.svg);
+  background-size: cover;
+  border-radius: 2px;
+  border-color: var(--accent-color);
+}
+
+.icon-checkbox {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-right: 8px;
+
+  border-radius: 2px;
+  border: 2px solid var(--title-text-color);
+  background-color: var(--primary-white-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link.terms {
+  display: block;
+  margin-left: 5px;
+
+  color: var(--accent-color);
+  text-decoration: underline;
+  text-align: right;
+}
+
+.button-submit {
+  min-width: 200px;
+  height: 50px;
+  padding: 0;
+  margin-top: 30px;
+  margin-bottom: 40px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
   letter-spacing: 0.06em;
+
+  color: var(--primary-white-color);
+  border-color: var(--accent-color);
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 0;
+
+  cursor: pointer;
+}
+
+.icon-close {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+}
+
+.modal-button:focus,
+.modal-button:hover {
+  fill: var(--accent-color);
 }
 
 /* Features */
