--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,7 @@ body {
   width: 528px;
   height: 581px;
   transform: translate(-50%, -50%) scale(1);
+  padding: 40px;
 
   background: var(--primary-white-color);
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -306,13 +307,12 @@ body {
 }
 
 .hero-form {
-  margin: 40px;
+  
   width: 448px;
 }
 
 .form-title {
   display: block;
-  margin-top: 40px;
   margin-bottom: 30px;
 
   text-align: center;
@@ -429,6 +429,7 @@ body {
 
 .terms-field {
   width: 100%;
+  margin-bottom: 30px;
   text-align: left;
 }
 
@@ -460,6 +461,7 @@ body {
   background-color: var(--accent-color);
   background-image: url(../images/check.svg);
   background-size: cover;
+  background-origin: border-box;
   border-radius: 2px;
   border-color: var(--accent-color);
 }
@@ -489,8 +491,6 @@ body {
   min-width: 200px;
   height: 50px;
   padding: 0;
-  margin-top: 30px;
-  margin-bottom: 40px;
 
   font-weight: 700;
   font-size: 16px;
